welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: reassignment to val
    versLAvant=true
              ^Program:7: error: reassignment to val
    versLAvant=false
              ^Program:9: error: reassignment to val
  nbPas=getY()
       ^