welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean){
  if (getDirection()==Direction.NORTH){
    versLAvant=true
  }
  else{
    versLAvant=false
  }
  nbPas=getY()
}